@@ -8,11 +8,20 @@
     <!-- ng-hide="documentSelection" -->
     <div ui-layout="{flow : 'column'}">
       <div ui-layout-container>
-	<div ui-layout="{dividerSize:'0'}">
-          <div ui-layout-container>
+	<div ui-layout="{dividerSize:'0', disableToggle:true}">
+		<div ui-layout-container size="0px" min-size="0px" max-size="46px" collapsed="!layout.showEditorTabs">
+	    <div class="main-content-header flow-effect-top" id="annotation-main-content-header">
+              <div class="btn-group">
+                <label class="btn btn-default active" ng-model="maincontentSelector" btn-radio="'document'">Document</label>
+                <label class="btn btn-default" ng-model="maincontentSelector" btn-radio="'attributes'">Document Attributes</label>
+              </div>
+            </div>
+          </div>
+          <div ui-layout-container="central">
             <div class="main-content">
               <div class='spinner-border' role='status'><span class='sr-only'>Loading...</span></div>
-              <text-widget></text-widget>
+	      <div class="main-content-document"   ng-show="maincontentSelector=='document'"><text-widget></text-widget></div>
+	      <div class="main-content-attributes" ng-show="maincontentSelector=='attributes'"></div>
 	      <div ng-show='spinnerVisible'><span class='fa fa-spinner'>Loading...</div>
             </div>
 	  </div>
